--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "files.associations": {
         "ioctl.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "cmdtoymath.h": "c",
+        "cmdtoyengine.h": "c",
+        "math.h": "c",
+        "unistd.h": "c"
     }
 }
